recursion.cons.increasing.Increasing.scala.error
Erreur de compilation :
Increasing:4: error: not found: value nil
    if (l.tail == nil) return last;
                  ^Increasing:4: error: type mismatch;
 found   : Int
 required: Boolean
    if (l.tail == nil) return last;
                              ^